# e2e_bi_tutorial

./: .gitignore  DAGSTER_GUIDE.md  README.md  create_iceberg_tables.py  docker-compose.yaml  pyproject.toml  run_complete_pipeline.py  run_dagster.py  run_retail_pipeline.py
.dlt/: config.toml
dagster_pipeline/: __init__.py  assets.py  dbt_assets.py  definitions.py
e2e_bi_tutorial/: retail_data_pipeline.py
e2e_bi_tutorial/dbt/e2e_bi_tutorial/: .user.yml  dbt_project.yml
e2e_bi_tutorial/dbt/e2e_bi_tutorial/models/marts/: marts_iceberg__general.sql  marts_iceberg__marketing.sql  marts_iceberg__payment.sql
e2e_bi_tutorial/dbt/e2e_bi_tutorial/models/staging/: stg_iceberg__customers.sql  stg_iceberg__orders.sql  stg_iceberg__products.sql  stg_iceberg__stores.sql
e2e_bi_tutorial/meltano/: meltano.yml
e2e_bi_tutorial/meltano/extract/: example_csv_files_def.json
superset/: docker-compose-image-tag.yml
