[tool.poetry]
name = "e2e-bi-tutorial"
version = "0.1.0"
description = ""
authors = ["Ong Jian Wei <ong_jian_wei@tech.gov.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
dbt-core = "^1.8.4"
dbt-trino = "^1.8.1"
meltano = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
