[tool.poetry]
name = "e2e-bi-tutorial"
version = "0.1.0"
description = ""
authors = ["Ong Jian Wei <ong_jian_wei@tech.gov.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13.3"
dbt-core = "^1.8.4"
dbt-trino = "^1.8.1"
dlt = {extras = ["filesystem"], version = "^1.5.0"}
pyiceberg = "^0.8.0"
pyarrow = "^17.0.0"
boto3 = "^1.35.0"
pandas = "^2.0.0"
requests = "^2.32.4"
dagster = "^1.6.3"
dagster-webserver = "^1.6.3"
dagster-dbt = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

